<resources>
    <string name="app_name">Calma</string>
    <string name="create_account">Create Account</string>
    <string name="login_hint">Log in</string>
    <string name="singup">Sign Up</string>
    <string name="joinus">Join Us</string>
    <string name="forget_password">Forget Password</string>
    <string name="mobile_number_hint">Phone Number</string>
    <string name="password_hint">Password</string>
    <string name="have_account">I have ALready Account</string>
    <string name="singup_hint">Sign Up</string>
    <string name="brith_date_hint">Birth Date</string>
    <string name="gender_hint">Gender</string>
    <string name="repeat_password_hint">Confirm Password</string>
    <string name="name_hint">User Name</string>
    <string name="regidter_hint">Register</string>
    <string name="verf_title">Verfication</string>
    <string name="verf">Enter Number</string>
    <string name="birth_date_hint">Birth Date</string>
    <string name="ok_hint">Ok</string>
    <string name="resend_hint">Resend</string>
    <string-array name="depression_quation">
        <item>كيف كان شعورك خلال الاسبوعين الماضيين, بما في ذلك اليوم؟</item>
        <item>كيف تشعر حيال المستقبل؟</item>
        <item>هل تشعر بالفشل؟</item>
        <item>إلى أي مدى تستمتع بالاشياء؟</item>
        <item>هل لديك شعور بالذنب؟</item>
        <item>هل تشعر بأنك معاقـَب؟</item>
        <item>هل شعرت بخيبة أمل من نفسك خلال الأسبوعين الماضيين؟</item>
        <item>هل تلوم نفسك على بعض الامور؟</item>
        <item>هل تفكر بالانتحار؟</item>
        <item>هل تبكي كثيرا؟</item>
    </string-array>
    <string-array name="Tension_quatios">
        <item>اختاري مدى التوتر الذي تشعرين به الآن من 1-4 (1= لا اشعر بالتوتر على الاطلاق، 4= اشعر بتوتر شديد)</item>
        <item>في الشهر الأخير، كم مرة شعرت بشكل متكرر أنك لا تستطيع السيطرة على الأمور الهامة في حياتك؟</item>
        <item>في الشهر الأخير، كم مرة شعرت بشكل متكرر، بثقة في قدرتك على التعامل مشاكلك الشخصية؟</item>
        <item>في الشهر الأخير، كم مرة شعرت بشكل متكرر، أن الأمور تسير كما ترغب؟</item>
        <item>في الشهر الأخير، كم مرة شعرت بشكل متكرر أن الصعوبات تتراكم عليك بشكل هائل حيث يصعب التغلب عليها؟</item>
        <item>هل تشعر بالكآبة أو الحزن لدرجة تجعلك تواجه مشكلة أدائية ضمن عملك\وظيفتك أو حياتك الشخصية؟</item>
    </string-array>
    <string-array name="Tension_answer1">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="Tension_answer2">
        <item>نادراً جداً</item>
        <item>لم أشعر بذلك كثيراً </item>
        <item>شعرت بذلك من حين الى آخر</item>
        <item>كثيراً جداً</item>
    </string-array>
    <string-array name="Tension_answer3">
        <item>أشعر بالثقة في قدراتي في اغلب الاحيان</item>
        <item>أشعر بالثقة في قدراتي احياناً </item>
        <item>لا أشعر بالثقة في قدراتي اغلب الاحيان</item>
        <item>لا أشعر بالثقة في قدراتي اطلاقاً</item>
    </string-array>
    <string-array name="Tension_answer4">
        <item>الامور تسير كما ارغب غالباً</item>
        <item>الامور تسير كما ارغب احياناً</item>
        <item>الامور لم تسير كما ارغب في اغلب الاحيان </item>
        <item>الامور لم تسير كما ارغب اطلاقاً </item>
    </string-array>
    <string-array name="Tension_answer5">
        <item>نادراً جداً</item>
        <item>لم أشعر بذلك كثيراً</item>
        <item>شعرت بذلك من حين الى آخر</item>
        <item>كثيراً جداً</item>
    </string-array>
    <string-array name="Tension_answer6">
        <item>لست كئيباً على الاطلاق</item>
        <item> كئيب نوعا ما </item>
        <item>كئيب جدا</item>
        <item>الكآبة جزء من حياتي</item>
    </string-array>
    <string-array name="depression_answer1">
        <item>لا اشعر بالحزن</item>
        <item> انا حزين </item>
        <item>اشعر بالحزن طوال الوقت ولا يمكنني التخلص منه</item>
        <item> اشعر بالحزن الشديد او التعاسة حتى انه لا يمكنني تحمل ذلك</item>
    </string-array>
    <string-array name="depression_answer2">
        <item>لا اشعر بالإحباط, خاصة حيال المستقبل</item>
        <item>اشعر بالإحباط من المستقبل</item>
        <item>اشعر انه ليس لدي ما يمكن توقعه</item>
        <item>اشعر باليأس حيال المستقبل وان الأمور لا يمكن ان تتحسن</item>
    </string-array>
    <string-array name="depression_answer3">
        <item>لا اشعر بالفشل</item>
        <item>اشعر بأنني فشلت أكثر من الشخص العادي</item>
        <item>عندما القي نظرة إلى الوراء على حياتي, فجُلّ ما اراه هو العديد من الإخفاقات</item>
        <item>أشعر بأنني فشلت فشلا ذريعا كانسان</item>
    </string-array>
    <string-array name="depression_answer4">
        <item>انا استمتع بالاشياء الان مثلما استمعت بها في الماضي</item>
        <item>انا لا استمتع بالاشياء الان مثلما استمعت بها في الماضي</item>
        <item>لا اشعر بالاستمتاع الحقيقي في أي شيء</item>
        <item>لا اشعر بالرضا من أي شيء، أو بأن كل شيء قد أصبح مملا</item>
    </string-array>
    <string-array name="depression_answer5">
        <item>لا اشعر بالذنب بشكل خاص</item>
        <item>اشعر بالذنب احيانًا</item>
        <item>اشعر بالذنب في معظم الوقت</item>
        <item>اشعر بالذنب طوال الوقت</item>
    </string-array>
    <string-array name="depression_answer6">
        <item>لا اشعر بأنني معاقـَب</item>
        <item>اشعر بأنني يمكن أن أعاقـَب</item>
        <item>اتوقع بأنني سوف أعاقـَب</item>
        <item>اشعر بأنني معاقـَب</item>
    </string-array>
    <string-array name="depression_answer7">
        <item>لا اشعر بخيبة امل من نفسي</item>
        <item>انا اشعر بخيبة امل من نفسي</item>
        <item>اشعر بالاشمئزاز من نفسي</item>
        <item>انا اكره نفسي</item>
    </string-array>
    <string-array name="depression_answer8">
        <item>لا اشعر أنني أسوأ من أي شخص آخر</item>
        <item>انتقد نفسي بشدة, بسبب ضعفي وأخطائي</item>
        <item>الوم نفسي دائما على عيوبي</item>
        <item>الوم نفسي على كل شيء سيء يحصل لي</item>
    </string-array>
    <string-array name="depression_answer9">
        <item>لا أفكر ابدًا بقتل نفسي</item>
        <item>تساورني الافكار بقتل نفسي ولكنني لن انفذها</item>
        <item>كنت اود قتل نفسي</item>
        <item>سأقتل نفسي إذا اتيحت لي الفرصة</item>
    </string-array>
    <string-array name="depression_answer10">
        <item>لا ابكي اكثر من المعتاد</item>
        <item>ابكي الآن اكثر من الماضي</item>
        <item>ابكي الآن طوال الوقت</item>
        <item> ان بامكاني البكاء في الماضي, اما الآن فلا استطيع البكاء على الرغم من رغبتي بذلك</item>
    </string-array>

    <string-array name="counteries">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Andorra</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei Darussalam</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Christmas Island</item>
        <item>Cocos (Keeling) Islands</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Kinshasa</item>
        <item>Brazzaville</item>
        <item>Cook Islands</item>
        <item>Costa Rica</item>
        <item>Ivory Coast</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Timor-Leste</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Falkland Islands</item>
        <item>Faroe Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Georgia</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Great Britain</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Holy See</item>
        <item></item>
    </string-array>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="schedule">Schedule</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="videos">Videos</string>
    <string name="articles">Articles</string>
    <string name="laziness">Laziness</string>
    <string name="Tension">Tension</string>
    <string name="Depression">Depression</string>
    <string name="findDoctor">found  Doctor</string>
    <string name="cancel">Cancel</string>
    <string name="fine">نسبه الاكتئاب عندك ضعيفه</string>
    <string name="accept">نسبه الاكتئاب متوسطه</string>
    <string name="bad">نسبه الاكتئاب عندك كبير تحتاج اللى دكتور</string>
    <string name="sobad">انت ممكن تنتحر من الاكتئاب لابد من ايجاد دكتور فورا</string>
    <string name="password_old">Enter old Password</string>
    <string name="new_password">Enter New Password</string>
    <string name="Doctors">Doctors</string>
    <string name="view_profile">View</string>
    <string name="docttor_name">Enter Doctor Name or Illness</string>
    <string name="upgrade">Upgrade To Doctor</string>
    <string name="addpost">Write Your Post here</string>
    <string name="puplish">Publish Post</string>
</resources>
