<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:textAppearanceLarge"
        android:layout_gravity="center"
        android:id="@+id/result"
        android:text="@string/about"
        />

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_button"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:elevation="5dp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/find_doctor"
            android:text="@string/findDoctor"
            android:textAllCaps="false"
            android:elevation="5dp"
            android:textColor="@color/white"
            />


    </LinearLayout>

</LinearLayout>