<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ImageButton
        android:onClick="PublishPost"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/add_btn"
        android:id="@+id/add_post_image"
        android:scaleType="centerCrop"
        />
    <EditText
        android:background="@drawable/verfication_text"
        android:layout_marginTop="50sp"
        android:id="@+id/post_content"
        android:padding="20dp"
        android:textAlignment="viewStart"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/addpost"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        />


    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:onClick="PublishPost"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:background="@drawable/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:id="@+id/post_cancel"
            android:layout_marginRight="5sp"
            />
        <Button
            android:onClick="PublishPost"
            android:layout_marginLeft="5sp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:background="@drawable/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/publish_post"
            android:text="@string/puplish"
            />
    </LinearLayout>
</LinearLayout>
</ScrollView>